# Repl.it-but-better

./: .env  TODO.md  client.py  main.py  pyproject.toml  requirements.txt  server.py  templates.py
queries/: HomeFeed.gql  currentUser.gql  dashboardRepls.gql
static/: crosis.js  custom.css  main.css  repl.js
templates/: base.html  index.html  login.html  repl.html
